# umbrella-mines

./: .gitignore  AUDIT-REPORT.md  CHANGELOG.md  LINUX-MINING-GUIDE.md  README.md  VERIFICATION-CHECKLIST.md  check-rates.php  php info.txt  test-mining-animation.html  umbrella-mines.php
.github/workflows/: build-libraries.yml
admin/: admin-styles.php  create-table.php  dashboard-live.php  dashboard-simple.php  dashboard.php  manual-submit.php  merge-addresses.php  solutions.php  wallets.php
ffi/: ashmaize_capi.h
includes/: class-ashmaize-ffi.php  class-background-miner.php  class-import-processor.php  class-merge-processor.php  class-mining-engine.php  class-nocturne-parser.php  class-payout-wallet.php  class-scavenger-api.php  class-system-requirements.php  class-wp-cli-commands.php  start-stop-handler.php
public/: mining-display.php
rust-wrapper/: Cargo.toml
rust-wrapper/src/: lib.rs
