[package]
name = "ashmaize_capi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use ce-ashmaize from git (IOHK official repo)
ashmaize = { git = "https://github.com/input-output-hk/ce-ashmaize.git" }
hex = "0.4"
cryptoxide = "~0.5.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
